# gtk4-rust

./: Cargo.toml  build.rs  glade.ui~
resources/: resources.gresource.xml  window.ui
src/: main.rs
src/window/: imp.rs  mod.rs
