[package]
name = "gtk4-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { version = "*", package = "gtk4", features = ["v4_8"] }
adw = { version = "0.2.0-alpha.2", package = "libadwaita" }
once_cell = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
xshell = "0.2"
dirs = "4.0"
walkdir = "2.3"

[build-dependencies]
glib-build-tools = "*"






